// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Technologies and Tools Grid slice should correctly render CardGridWithIcon component 1`] = `
<div>
  <section
    class="card-grid-main"
    style="background-color: rgb(17, 18, 19);"
  >
    <!---->
     
    <lazyhydrate-stub
      idletimeout="2000"
      whenvisible="true"
    >
      <toolsgrid-stub
        data-testid="tools-grid-variation"
        primary="[object Object]"
        slice="[object Object]"
        variation="toolsGrid"
      />
    </lazyhydrate-stub>
     
    <!---->
  </section>
</div>
`;

exports[`Technologies and Tools Grid slice should correctly render TechnologiesAndTools component 1`] = `
<div>
  <section
    class="card-grid-main"
    style="background-color: rgb(17, 18, 19);"
  >
    <lazyhydrate-stub
      idletimeout="2000"
      whenvisible="true"
    >
      <technologiesandtools-stub
        class="aos-init aos-animate"
        data-aos="fade-up"
        data-testid="technologies-grid-variation"
        primary="[object Object]"
        slice="[object Object]"
        variation="default-slice"
      />
    </lazyhydrate-stub>
     
    <!---->
     
    <!---->
  </section>
</div>
`;
